<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">Syncloud</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="ebay">Buy new</string>
    <string name="activate_button">Activate</string>
    <string name="owncloud_password_label">Password:</string>
    <string name="owncloud_login_label">Login:</string>
    <string name="discovery_toggle">Discovery:</string>
    <string name="rescan_label">Refresh</string>
    <string name="name_email">Email:</string>
    <string name="name_registration">Do not enter domain name if you have an account</string>
    <string name="name_example">For browser: [login].syncloud.it</string>
    <string name="name_password_label">Password:</string>
    <string name="name_login_label">Domain name:</string>
    <string name="name_for_app_label">For app: device.[login].syncloud.it:[externalPort]/owncloud</string>
    <string name="title_activity_device">Apps</string>
    <string name="title_activity_app_store">Manage Apps</string>
    <string name="device_label">Device:</string>
    <string name="title_activity_owncloud">ownCloud</string>
    <string name="title_activity_dns">dns</string>
    <string name="dns_label">Public Name</string>
    <string name="owncloud_label">ownCloud: File storage</string>
    <string name="title_activity_app_details">AppDetails</string>
    <string name="app_install">Install</string>
    <string name="app_remove">Remove</string>
    <string name="app_verify">Verify</string>
    <string name="app_update">Update</string>
    <string name="title_activity_device_settings">DeviceSettings</string>
    <string name="remote_access_label">Remote app management:</string>
    <string name="update_spm">Update apps</string>
    <string name="title_activity_remote__access">Remote_Access</string>
    <string name="title_activity_insider">Activation</string>
    <string name="owncloud_url_label">ownCloud url:</string>
    <string name="owncloud_web_btn_text">Web</string>
    <string name="owncloud_mobile_btn_text">Mobile</string>
    <string name="title_activity_discovery">Discovery</string>
    <string name="all_apps">Show admin apps</string>
    <string name="title_activity_auth">AuthActivity</string>
    <string name="title_activity_settings">Settings</string>
    <string name="device_activation_email"></string>
    <string name="device_activation_password"></string>
    <string name="device_activation_domain"></string>
    <string name="auth_learn_more">Build your own server. <a href="http://syncloud.org">Learn more!</a></string>
    <string name="sign_in_exclamation"><u>Sign in!</u></string>
    <string name="check_credentials">Check credentials</string>
    <string name="sign_in_failed">Sign in with these credentials failed. Please check and correct credentials.</string>
    <string name="crash_toast_text">Wait for report dialog!</string>
    <string name="crash_dialog_title">Syncloud crashed!</string>
    <string name="crash_dialog_text">An error occurred forcing the application to stop. Send us error report and help to fix this problem.</string>
    <string name="crash_dialog_comment_prompt">You might add your comments about the problem below:</string>
    <string name="crash_dialog_ok_toast">Thank you!</string>
    <string name="btn_report_error">Send error report</string>
    <string name="title_devices">Devices</string>
    <string name="revoot_device">Reboot device</string>
    <string name="title_activity_logs">Logs</string>
    <string name="title_activity_git_bucket">GitBucket</string>
    <string name="title_activity_upnp_check">Router Check</string>

<!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_device_web_view">DeviceWebView</string>
    <string name="title_activity_activate">Activate</string>
    <string name="prompt_domain">Domain</string>
    <string name="prompt_device_login">Device login</string>
    <string name="prompt_device_password">Device password</string>

    <string name="title_activity_auth_credentials">Sign in</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="action_sign_up">Sign up</string>

    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>

    <string name="admin_login">Admin  Login</string>
    <string name="admin_password">Admin Password</string>
    <string name="use_https">Use HTTPS</string>

    <string name="action_activate">Activate</string>

</resources>
