<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.syncloud.android.activity.Device">

    <ScrollView
        android:layout_width="fill_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/linearLayout"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:orientation="vertical">

            <TextView
                android:id="@+id/device"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/device_label"
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <TextView
                android:id="@+id/device_address"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text=""
                android:textAppearance="?android:attr/textAppearanceLarge" />

            <Button
                android:id="@+id/app_dns"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/dns_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:onClick="dns"/>

            <Button
                android:id="@+id/app_owncloud"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:text="@string/owncloud_label"
                android:textAppearance="?android:attr/textAppearanceLarge"
                android:onClick="owncloud"/>


        </LinearLayout>
    </ScrollView>

</RelativeLayout>
