<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center_horizontal"
    android:orientation="vertical"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    tools:context="org.syncloud.android.ui.ActivateActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <FrameLayout
            android:layout_width="fill_parent"
            android:layout_height="fill_parent"
            >

            <LinearLayout
                android:id="@+id/activity_form"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal">

                    <EditText
                        android:id="@+id/edit_domain"
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:layout_weight="1"
                        android:hint="@string/prompt_domain"
                        android:inputType="text"
                        android:maxLines="1"
                        android:singleLine="true"/>

                    <TextView
                        android:id="@+id/label_domain"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_weight="0"
                        android:textSize="18sp"
                        android:text=".syncloud.it"/>

                </LinearLayout>

                <EditText
                    android:id="@+id/edit_login"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_device_login"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <EditText
                    android:id="@+id/edit_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/prompt_device_password"
                    android:imeActionId="@+id/activate"
                    android:imeActionLabel="@string/action_activate"
                    android:imeOptions="actionUnspecified"
                    android:inputType="text"
                    android:maxLines="1"
                    android:singleLine="true"/>

                <Button
                    android:id="@+id/btn_activate"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:onClick="activate"
                    android:text="@string/action_activate"
                    android:textStyle="bold"/>

            </LinearLayout>

            <com.lsjwzh.widget.materialloadingprogressbar.CircleProgressBar
                android:id="@+id/progress"
                app:mlpb_progress_stoke_width="3dp"
                app:mlpb_progress_color="#566da9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical|center_horizontal"
                android:visibility="gone"
                />

        </FrameLayout>

    </ScrollView>

</LinearLayout>
