<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context="org.syncloud.android.ui.apps.GitBucket">

    <LinearLayout
        android:id="@+id/activated_controls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        >

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            >

            <TextView
                android:id="@+id/txt_url"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_centerVertical="true"
                android:layout_toLeftOf="@+id/owncloud_url_copy_btn"
                android:text="url"
                />

            <ImageButton
                android:id="@+id/btn_url_copy"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:background="@drawable/ic_action_copy"
                android:padding="25dp"
                android:onClick="copyUrl"
                />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_web"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="showWeb"
            android:text="Open Browser"
            />

        <Button
            android:id="@+id/btn_deactivate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:onClick="deactivate"
            android:text="Deactivate"
            />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/not_activated_controls"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <EditText
            android:id="@+id/txt_login"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_login"
            android:inputType="text"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <EditText
            android:id="@+id/txt_password"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/admin_password"
            android:inputType="textPassword"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <Button
            android:id="@+id/btn_activate"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:onClick="activate"
            android:text="@string/activate_button"/>

    </LinearLayout>

</RelativeLayout>
